--- a/src/sass/base.sass
+++ b/src/sass/base.sass
@@ -1,3 +1,4 @@
+//other global styles
 *
     margin: 0
     padding: 0
@@ -12,8 +13,17 @@ a
 
 html
     font-family: $defaultFontFamily
+    
+.main-content
+    padding-top: 95px
 
 .container
     padding: 25px 55px
     width: $defaultContainerSize
     margin: 0 auto
+
+.anchor
+    display: block
+    position: relative
+    top: -95px
+    visibility: hidden
