--- a/src/sass/mixins.sass
+++ b/src/sass/mixins.sass
@@ -22,4 +22,7 @@
         size: cover
         position: center
         repeat: no-repeat
+
+//fix nav "position: fixed", bad jump to anchor
+
         
