--- a/src/sass/section-preview.sass
+++ b/src/sass/section-preview.sass
@@ -5,6 +5,7 @@
     justify-content: center
     color: $secondaryTextColor
     font-size: 4.5rem
+    text-align: center
     @include interruptions-background("../../assets/img/bg_preview.png")
 
     
