--- a/src/sass/vars.sass
+++ b/src/sass/vars.sass
@@ -17,7 +17,13 @@ $defaultHeadingFontSize: 4rem
 $defaultNavigationFontSize: 1.5rem
 //24px
 
-$defaultFontFamily: Roboto, sans-serif
+$defaultFontFamily: 'Roboto', sans-serif
 
 //container hard size settings
 $defaultContainerSize: 1219px
+$mobileContainerSize: 100%
+
+//media table
+$bigDevice: 1219px
+$middleDevice: 1190px
+$smallDivece: 830px
