--- a/src/sass/section-introduction.sass
+++ b/src/sass/section-introduction.sass
@@ -3,9 +3,20 @@
     &_heading
         @include default-heading-settings
 
+    &_wrapper
+        display: flex
+        flex:
+            direction: row
+        align-items: center
+        @include default-text-settings
+
+
     &_logo
-        float: left
         padding-right: 48px
 
     &_regular-text
         @include default-text-settings
+
+    &_wrapped_text
+        padding: 0
+
